--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     build:
       context: jenkinsMyImage
     ports:
-      - "9001:8080"
-      - "443:8443"
+      - "127.0.0.1:9001:8080"
+      - "127:0.0.1:443:8443"
     volumes:
       - $PWD/data:/var/jenkins_home
+      # Para emplear docker desde el container de jenkins:lts-alpine
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - net
   
