--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 services:
   jenkins:
     container_name: jenkins-sanclemente1920
-    image: ies/jenkins
+    image: ies/jenkins:sandbox
     build:
-      context: jenkinsMyImage
+      context: jenkinsMyImage-Sandbox
     ports:
       - "127.0.0.1:9001:8080"
       - "127:0.0.1:443:8443"
     volumes:
-      - $PWD/data:/var/jenkins_home
+      - $PWD/data-sandbox:/var/jenkins_home
       # Para emplear docker desde el container de jenkins:lts-alpine
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
