--- a/jenkins/docker-compose-sandbox.yml
+++ b/jenkins/docker-compose-sandbox.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   jenkins:
-    container_name: jenkins-sanclemente1920
-    image: ies/jenkins:sandbox
+    container_name: jenkins-sandbox
+    image: eduxunta/jenkins:sandbox
     build:
-      context: jenkinsMyImage-Sandbox
+      context: jenkinsMyImage-sandbox
     ports:
       - "127.0.0.1:9001:8080"
       - "127:0.0.1:443:8443"
