--- a/jenkins/docker-compose-sandbox.yml
+++ b/jenkins/docker-compose-sandbox.yml
@@ -9,7 +9,7 @@ services:
       - "127.0.0.1:9001:8080"
       - "127:0.0.1:443:8443"
     volumes:
-      - $PWD/data-sandbox:/var/jenkins_home
+      - $PWD/jenkins-home-sandbox:/var/jenkins_home
       # Para emplear docker desde el container de jenkins:lts-alpine
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
